fixed alignment in listings

--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@ h2 {
 h3 {
   font-family: cormorantFont;
   margin-top: 1rem;
-  margin-left: 1.5rem;
+  /* margin-left: 1.5rem; */
   font-size: 1.5rem;
 }
 
@@ -138,7 +138,10 @@ h4 {
 p {
   font-family: "Lato";
   margin-top: 0;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
+}
+.left-indent{
+margin-left: 2rem;
 }
 
 
